--- a/docs_site/content/00-dbux-overview.mdx
+++ b/docs_site/content/00-dbux-overview.mdx
@@ -1,25 +1,20 @@
 ---
 slug: /
+title: Overview
 # path: why-dbux
 ---
-
-
-TODO: change "Why Dbux?" to "00-Dbux-Overview" (move from nested folder)
-  → re-write this as visual intro to Dbux
-  → give a clearer picture of what it can do and which scenarios work and which won't
-    → limitations
-      → e.g. issues w/ react and performance
-    → future work: list of all directly and indirectly tested/experimented packages
-
-
-
-
-# Dbux: What and Why?
 
 import Img from '@src/components/Img';
 import Term from '@src/components/Term';
 import CodeLink from '@src/components/CodeLink';
 
+
+<!-- future-work:
+  → re-write this as visual intro to Dbux
+  → give a clearer picture of what it can do and which scenarios work and which won't
+    → limitations
+      → e.g. issues w/ react and performance
+    → future work: list of all directly and indirectly tested/experimented packages -->
 
 Dbux is an integrated debugging environment (IDbE) and omniscient debugger for JavaScript dynamic analysis. We hope to help developers (i) improve program comprehension and (ii) increase debugging efficiency. To that end, Dbux records an application's runtime data, visualizes it and makes it interactive.
 
@@ -48,26 +43,7 @@ To get a good first impression of Dbux, we recommend this video. It...:
 
 
 
-## Why Dbux?
-
-<!-- https://docusaurus.io/docs/next/markdown-features/admonitions
-:::caution -->
-
-I (Dominik) started this project on 11/16/2019 because I felt that after programming/designing software, and debugging for 20 years, I have not fully mastered my craft. This became particularly apparent during problem solving sessions with clients, when I'm rather, or at least quite, unfamiliar with the code. Being stuck for 30 minutes or longer to locate a single bug was not a rare occasion. I felt like I was lacking something, lacking an approach, lacking strategy, and also lacking a sufficiently deep understanding of the semantics of the program at hand. It was this frustration that lead me on the journey to build Dbux.
-
-I started to realize that I wanted to be able to answer (seemingly always the same type of) questions, like: How did THAT happen? Where did THAT data come from? Where did the execution take THAT turn?
-
-I wanted to be able to more easily **see** (not just [guess/assume/theorize/conjecture/suppose/opine/test/prod/verify](https://www.thesaurus.com/browse/guess)) what is going on. I wanted to interact more with the runtime structure, not just indirectly through print statements, or one single small step at a time. I wanted to see the whole thing, zoom in and out, whenever necessary be able to zoom in real close, and then interact with it in order to investigate some of the non-obvious connections from where I am to where the bug is.
-
-The goal was clear: collect all relevant run-time data, record it and make it easily accessible. And thus, Dbux was born. 
-
-We (Dominik and Michael) believe that Dbux does NOT make someone good at debugging. However, it can help better see (and appreciate?) what is going on in our applications by revealing the hidden structures beneath it. What you do with that information, is up to you! Luckily, it is (speaking from a rather biased position) kinda fun to interact with Dbux to poke around the actual recorded behavior of the code, navigating along the connections, and uncovering interesting little insights into what is actually going on in our applications. It is at least more fun (or so we feel) than just staring at the code guessing, more fun than adding/removing print/console statements, and more fun than waiting for the debugging session to re-start for the 5th time, after overshooting a crucial line of code yet again.
-
-
-
 ## Dbux Features
-
-<!-- TODO: make this part bigger and more visual -->
 
 Once an application has executed with [Dbux enabled](./dbux-features/02-enable-dbux.mdx), a collection of analytical tools is available via the [Dbux VSCode Extension](./tools-and-configuration/01-dbux-code.mdx), including:
 
@@ -83,19 +59,19 @@ Once an application has executed with [Dbux enabled](./dbux-features/02-enable-d
 
 ## Call to Action
 
-If you are so inclined, please check out Dbux, and feel free to bombard me with any questions, complaints, any kind of feedback. I would greatly appreciate it!
+Dbux has a bit of a learning curve. We recommend programming beginners to start with the [interactive tutorials](./dbux-practice/02-tutorial.md).
+
+:::tip
+While you can certainly try to get started on your own, you are welcome to join us on [DISCORD](https://discord.gg/8kR2a7h), ask questions and complain as you go along. We appreciate any feedback.
+:::
+
 
 ## Word of Caution: ALPHA Phase!
 
-Dbux is currently still in ALPHA. While we have been testing it on many small <CodeLink path="samples" /> and <CodeLink path="dbux-projects/src/projects" >several real-world projects</CodeLink>, there is always a chance, that the next one does not exactly work the way it should. For example, tracing the internals of `react` is currently (01/2022) [bugged](https://github.com/Domiii/dbux/issues/640).
+Dbux is currently still in ALPHA. While we have been testing it on many small <CodeLink path="samples" /> and <CodeLink path="dbux-projects/src/projects" >several real-world projects</CodeLink>, there is always a chance, that the next one does not exactly work the way it should.
 
-If you run into any problems when using Dbux, please [let us know](https://discord.gg/8kR2a7h).
+If you run into any problems or otherwise would like to share your experiences with Dbux, please [let us know](https://discord.gg/8kR2a7h).
 
-:::tip
-Dbux has a bit of a learning curve. We recommend programming beginners to start with the [interactive tutorials](./dbux-practice/02-tutorial.md).
-
-While you can certainly try to get started on your own, you are welcome to join us on [DISCORD](https://discord.gg/8kR2a7h), ask questions and complain as you go along.
-:::
 
 
 
