--- a/docs_site/content/advanced/04-terminology.mdx
+++ b/docs_site/content/advanced/04-terminology.mdx
@@ -29,4 +29,4 @@ In dynamic analysis research, the term `trace` usually refers to the entire runt
   * While functions can be executed many times, JavaScript files usually only execute once, that is the first time they are `require`'d or `import`'ed.
   * After that first time, their `exports` are cached, and returned to any following caller of `require` or `import`.
   * That is why you will only see a single trace in the file scope, even if you require them many times.
-* TODO: explain virtual and async contexts
+* TODO: explain `virtual` and `async` contexts
