--- a/docs_site/content/02-why-dbux.mdx
+++ b/docs_site/content/02-why-dbux.mdx
@@ -5,15 +5,22 @@ title: Why Dbux?
 <!-- https://docusaurus.io/docs/next/markdown-features/admonitions
 :::caution -->
 
+## Video Introduction
+
+[![Video Introduction](https://img.youtube.com/vi/LhM01DL9dLc/0.jpg)](https://www.youtube.com/watch?v=LhM01DL9dLc&t=162s)
+
+
+## A more Personal Explanation
+
 I (Dominik) started this project on 11/16/2019 because I felt that after programming/designing software, and debugging for 20 years, I have not fully mastered my craft. This became particularly apparent during problem solving sessions with clients, when I'm rather, or at least quite, unfamiliar with the code. Being stuck for 30 minutes or longer to locate a single bug was not a rare occasion. I felt like I was lacking something, lacking an approach, lacking strategy, and sometimes also lacking a sufficiently deep understanding of what this entirely unknown piece of code is trying to do. It was this frustration that lead me on the journey to build Dbux.
 
 It all started with some **hopes and dreams**...
 
-0. I wanted to be able to answer (seemingly always the same type of) questions, like: How did THAT happen? Where did THAT data come from? Where did the execution take THAT turn?
-1. I wanted to actually **see** (not just [guess/assume/theorize/conjecture/suppose/opine/test/prod/verify](https://www.thesaurus.com/browse/guess)) what is going on.
-2. I wanted to interact more with the runtime structure, not just indirectly through print statements, or one single small step at a time. I wanted to be able to explore some of the non-obvious connections from where I am to where the bug is.
-3. I wanted to see the whole thing, zoom out all the way to gain a big-picture overview.
-4. I wanted to be able to zoom in real close and see all details regarding that one piece of code.
+1. I wanted to be able to answer (seemingly always the same type of) questions, like: How did THAT happen? Where did THAT data come from? Where did the execution take THAT turn?
+2. I wanted to actually **see** (not just [guess/assume/theorize/conjecture/suppose/opine/test/prod/verify](https://www.thesaurus.com/browse/guess)) what is going on.
+3. I wanted to interact more with the runtime structure, not just indirectly through print statements, or one single small step at a time. I wanted to be able to explore some of the non-obvious connections from where I am to where the bug is.
+4. I wanted to see the whole thing, zoom out all the way to gain a big-picture overview.
+5. I wanted to be able to zoom in real close and see all details regarding that one piece of code.
 
 Given this wish list, it was clear: I needed to collect all relevant run-time data, record it and make it easily accessible. And thus, Dbux was born.
 
