--- a/docs_site/content/dbux-features/20-acg.mdx
+++ b/docs_site/content/dbux-features/20-acg.mdx
@@ -68,7 +68,16 @@ This example demonstrates the ACG of [todomvc (vanilla-es6)](https://github.com/
   <source src="../async-hard.gif" type="video/mp4" />
 </video> -->
 
-## What is the Asynchronous Call Graph (ACG)?
+## Why do we need an Asynchronous Call Graph (ACG)?
+
+[Asynchronous JavaScript](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous) and its relatives, [parallel programming](https://en.wikipedia.org/wiki/Parallel_programming) and [concurrent computing](https://en.wikipedia.org/wiki/Concurrent_computing), lead to much more complex execution pattern than their non-asynchronous, non-parallel, non-concurrent counterparts. In fact, asynchronous semantics are one of the most daunting aspects of JavaScript that software developers have to deal with on a day-to-day basis, making it <span className="cursor-help highlight-on-hover" title="This is a generic statement, so phrased for dramatic effect, not for accuracy.">feared by many, underestimated by the rest<sup>*</sup></span>.
+
+With the ACG we hope to make asynchronous JavaScript a lot easier to understand and digest. It presents a clear picture of an application's asynchronous control flow, and makes many types of <Term term="race conditions" /> visually obvious. It can also help uncover lacking error propagation and a lot more. For example, if your application's ACG has many individual columns, but a low level of actual concurrency (things don't actually happen concurrently), it might indicate that you (i) forgot to `await` or otherwise chain or nest your promises, or maybe (ii) are suffering from legacy code involving asynchronous callbacks and potential callback hell, that would benefit from re-writing using modern explicit asynchronous semantics.
+<!-- TODO: examples for visible race conditions -->
+
+
+
+## How does the Asynchronous Call Graph (ACG) work?
 
 The Asynchronous Call Graph (ACG) is the [call graph](./08-call-graph.mdx) in `Async` mode. You can see the ACG by opening the [call graph](./08-call-graph.mdx) and switching to `Async` mode (by clicking the `Sync` button in the [toolbar](./08-call-graph.mdx#toolbar)). The two call graph modes share many features, including the toolbar buttons, coloring and more, as explained [here](./08-call-graph.mdx#toolbar).
 
@@ -78,15 +87,5 @@ In many debugging scenarios, you probably want to toggle between the two modes, 
 
 
 :::tip
-For more in-depth technical information, consult our ICSE-SEIP paper: [An Asynchronous Call Graph for JavaScript](https://ieeexplore.ieee.org/document/9794057).
+For more in-depth technical information, consult our ICSE-SEIP paper: [An Asynchronous Call Graph for JavaScript (ACM, 2022)](https://ieeexplore.ieee.org/document/9794057).
 :::
-
-
-## Why?
-
-[Asynchronous JavaScript](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous) and its relatives, [parallel programming](https://en.wikipedia.org/wiki/Parallel_programming) and [concurrent computing](https://en.wikipedia.org/wiki/Concurrent_computing), lead to much more complex execution pattern than their non-asynchronous, non-parallel, non-concurrent counterparts. In fact, asynchronous semantics are one of the most daunting aspects of JavaScript that software developers have to deal with on a day-to-day basis, making it <span className="cursor-help highlight-on-hover" title="This is a generic statement, so phrased for dramatic effect, not for accuracy.">feared by many, underestimated by the rest<sup>*</sup></span>.
-
-With the ACG we hope to make asynchronous JavaScript a lot easier to understand and digest. It presents a clear picture of an application's asynchronous control flow, and makes many types of <Term term="race conditions" /> visually obvious. It can also help uncover lacking error propagation and a lot more. For example, if your application's ACG has many individual columns, but a low level of actual concurrency (things don't actually happen concurrently), it might indicate that you (i) forgot to `await` or otherwise chain or nest your promises, or maybe (ii) are suffering from legacy code involving asynchronous callbacks and potential callback hell, that would benefit from re-writing using modern explicit asynchronous semantics.
-<!-- TODO: examples for visible race conditions -->
-
-
