WIP: docs for PDG

--- a/docs_site/content/dbux-features/20-acg.mdx
+++ b/docs_site/content/dbux-features/20-acg.mdx
@@ -68,7 +68,7 @@ This example demonstrates the ACG of [todomvc (vanilla-es6)](https://github.com/
   <source src="../async-hard.gif" type="video/mp4" />
 </video> -->
 
-## Why do we need an Asynchronous Call Graph (ACG)?
+## Why do we need an ACG?
 
 [Asynchronous JavaScript](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Asynchronous) and its relatives, [parallel programming](https://en.wikipedia.org/wiki/Parallel_programming) and [concurrent computing](https://en.wikipedia.org/wiki/Concurrent_computing), lead to much more complex execution pattern than their non-asynchronous, non-parallel, non-concurrent counterparts. In fact, asynchronous semantics are one of the most daunting aspects of JavaScript that software developers have to deal with on a day-to-day basis, making it <span className="cursor-help highlight-on-hover" title="This is a generic statement, so phrased for dramatic effect, not for accuracy.">feared by many, underestimated by the rest<sup>*</sup></span>.
 
@@ -77,7 +77,7 @@ With the ACG we hope to make asynchronous JavaScript a lot easier to understand 
 
 
 
-## How does the Asynchronous Call Graph (ACG) work?
+## How does the ACG work?
 
 The Asynchronous Call Graph (ACG) is the [call graph](./08-call-graph.mdx) in `Async` mode. You can see the ACG by opening the [call graph](./08-call-graph.mdx) and switching to `Async` mode (by clicking the `Sync` button in the [toolbar](./08-call-graph.mdx#toolbar)). The two call graph modes share many features, including the toolbar buttons, coloring and more, as explained [here](./08-call-graph.mdx#toolbar).
 
