--- a/docs_site/content/dbux-features/25-pdg.mdx
+++ b/docs_site/content/dbux-features/25-pdg.mdx
@@ -12,12 +12,12 @@ import TOC from '@comp/TOC';
 
 
 
-## Why do we need a Program Dependency Graph (PDG)?
+## Why do we need a PDG?
 
 
 
 
-## How does the Program Dependency Graph (PDG) work?
+## How does the PDG work?
 
 
 
