--- a/docs_site/content/00-dbux-overview.mdx
+++ b/docs_site/content/00-dbux-overview.mdx
@@ -22,9 +22,9 @@ Dbux is an integrated debugging environment (IDbE) and omniscient debugger for J
 
 The screenshot above demonstrates several of Dbux's features, including:
 
-* Left: [omni-directional navigation, values, executions](./dbux-features/30-trace-details.mdx) and [data flow](./dbux-features/50-data-flow.mdx).
-* Middle: [code decorations](./dbux-features/04-code-decorations.mdx) and [trace selection](./dbux-features/05-select-trace.mdx).
-* Right: [asynchronous call graph](./dbux-features/20-asynchronous-call-graph.mdx).
+* Left: [omni-directional navigation, values, executions](./dbux-features/07-trace-details.mdx) and [data flow](./dbux-features/50-data-flow.mdx).
+* Middle: [code decorations](./dbux-features/04-code-decorations.mdx) and [trace selection](./dbux-features/06-select-trace.mdx).
+* Right: [asynchronous call graph](./dbux-features/20-acg.mdx).
 
 <!-- <a href="https://www.youtube.com/watch?v=m1ANEuZJFT8" target="_blank" alt="video">
    <img width="150px" src="https://img.youtube.com/vi/m1ANEuZJFT8/0.jpg" />
@@ -47,12 +47,12 @@ To get a good first impression of Dbux, we recommend this video. It...:
 
 Once an application has executed with [Dbux enabled](./dbux-features/02-enable-dbux.mdx), a collection of analytical tools is available via the [Dbux VSCode Extension](./tools-and-configuration/01-dbux-code.mdx), including:
 
-* Dbux's [global view](./dbux-features/07-global.mdx) lists third-party modules, files and console log events. Takes user to the relevant code in a single click.
+* Dbux's [global view](./dbux-features/08-global.mdx) lists third-party modules, files and console log events. Takes user to the relevant code in a single click.
   * NOTE: While this eliminates the need for most of "[print-based debugging](https://www.google.com/search?q=print-based+debugging&hl=en)", it does not replace use of [proper logging](https://www.google.com/search?q=logging+programming+best+practices).
-* [Trace selection](./dbux-features/05-select-trace.mdx) and the [Trace Details view](./dbux-features/30-trace-details.mdx) allow overviewing and investigating all executions of any piece of code and their respective values.
-* Instead of only a call stack, Dbux presents us with the entire [call graph](./dbux-features/08-call-graph.mdx).
-  * A complete [asynchronous call stack](./dbux-features/08-call-graph.mdx#stack) is also available.
-* Instead of using the traditional debugger as a "magnifying glass" to slowly crawl along the execution timeline, Dbux offers random-access [navigation](./dbux-features/30-trace-details.mdx#navigation), in both directions of the timeline.
+* [Trace selection](./dbux-features/06-select-trace.mdx) and the [Trace Details view](./dbux-features/07-trace-details.mdx) allow overviewing and investigating all executions of any piece of code and their respective values.
+* Instead of only a call stack, Dbux presents us with the entire [call graph](./dbux-features/10-call-graph.mdx).
+  * A complete [asynchronous call stack](./dbux-features/10-call-graph.mdx#stack) is also available.
+* Instead of using the traditional debugger as a "magnifying glass" to slowly crawl along the execution timeline, Dbux offers random-access [navigation](./dbux-features/07-trace-details.mdx#navigation), in both directions of the timeline.
 * [Code decorations](./dbux-features/04-code-decorations.mdx) can make it a lot more obvious what code executed at all, and how.
 * Executed files, functions and values [can be searched](./dbux-features/40-search.mdx) for/through (culls a lot of noise when compared to code-based search).
 * [Data flow analysis](./dbux-features/50-data-flow.mdx) allows us to quickly trace the reads, writes and creation of a selected value. This can also take us to the place of creation of a value in a single click.
