--- a/docs_site/content/dbux-features/01-using-dbux.mdx
+++ b/docs_site/content/dbux-features/01-using-dbux.mdx
@@ -19,18 +19,18 @@ Once [installed](#installation), using Dbux involves two steps:
 1. Make sure to [run an Application with Dbux enabled](./02-enable-dbux.mdx).
 2. Use the <ToolLink name="dbux-code" /> for inspection + analysis.
 
-All recorded applications show up in the [Application View](./06-applications.mdx).
+All recorded applications show up in the [Application View](./05-applications.mdx).
 Once the application shows up, you can use the following tools for analysis:
 
-* Use the [Application View](./06-applications.mdx) to overview and toggle all recorded applications.
+* Use the [Application View](./05-applications.mdx) to overview and toggle all recorded applications.
   * From here you can also go to the ***entry point***.
 * Get a high-level overview with:
-  * The [Global View](./07-global.mdx).
-  * The [Call Graph](./08-call-graph.mdx) or [Asynchronous Call Graph](./20-asynchronous-call-graph.mdx).
+  * The [Global View](./08-global.mdx).
+  * The [Call Graph](./10-call-graph.mdx) or [Asynchronous Call Graph](./20-acg.mdx).
 * Get down into the nitty-gritty:
-  * &#8203;<DarkLightImg src="crosshair_red.svg" /> [Select a Trace](./05-select-trace.mdx).
-  * Investigate individual traces using the [Trace Details View](./30-trace-details.mdx).
-  * &#8203;<DarkLightImg width="24px" src="nextInContext.svg" /> <DarkLightImg width="24px" src="previousInContext.svg" /> [Navigate](./30-trace-details.mdx#navigation) between traces.
+  * &#8203;<DarkLightImg src="crosshair_red.svg" /> [Select a Trace](./06-select-trace.mdx).
+  * Investigate individual traces using the [Trace Details View](./07-trace-details.mdx).
+  * &#8203;<DarkLightImg width="24px" src="nextInContext.svg" /> <DarkLightImg width="24px" src="previousInContext.svg" /> [Navigate](./07-trace-details.mdx#navigation) between traces.
 * Understand where data came from and where it went using the [Data Flow View](./50-data-flow.mdx).
 * [Search](./40-search.mdx) for traces, contexts, modules or data/variable/expression values.
 
