--- a/docs_site/content/dbux-features/10-call-graph.mdx
+++ b/docs_site/content/dbux-features/10-call-graph.mdx
@@ -69,7 +69,7 @@ Above screenshots: (1) the call graph has a single collapsed root. (2) The entir
 
 ## Asynchronous Call Graph {#async}
 
-In `Async` mode, the call graph becomes the [asynchronous call graph](./20-asynchronous-call-graph.mdx) (short: ACG), which is explained on [the next page](./20-asynchronous-call-graph.mdx).
+In `Async` mode, the call graph becomes the [asynchronous call graph](./20-acg.mdx) (short: ACG), which is explained on [the next page](./20-acg.mdx).
 
 
 
@@ -165,7 +165,7 @@ Show/hide `value` in context nodes.
 
 ### follow
 
-When `follow` mode is activated, the call graph always zooms in on the call graph node of the currently [selected trace](./05-select-trace.mdx).
+When `follow` mode is activated, the call graph always zooms in on the call graph node of the currently [selected trace](./06-select-trace.mdx).
 
 
 
