fixing up dialogs

--- a/docs_site/content/00-dbux-overview.mdx
+++ b/docs_site/content/00-dbux-overview.mdx
@@ -59,7 +59,7 @@ Once an application has executed with [Dbux enabled](./dbux-features/02-enable-d
 
 ## Call to Action
 
-Dbux has a bit of a learning curve. We recommend programming beginners to start with the [interactive tutorials](./dbux-practice/02-tutorial.md).
+Dbux has a bit of a learning curve. We recommend programming beginners to start with [basic tutorials](./dbux-practice/02-tutorial.md).
 
 :::tip
 While you can certainly try to get started on your own, you are welcome to join us on [DISCORD](https://discord.gg/8kR2a7h), ask questions and complain as you go along. We appreciate any feedback.
