--- a/docs_site/content/01-installation.mdx
+++ b/docs_site/content/01-installation.mdx
@@ -1,4 +1,4 @@
-# Getting Started
+# Installation
 
 import Img from '@src/components/Img';
 import TOC from '@src/components/TOC';
@@ -7,8 +7,6 @@ import CodeLink from '@src/components/CodeLink';
 import ToolLink from '@src/components/ToolLink';
 
 <TOC toc={toc} />
-
-## Installation
 
 1. [Install the Dbux VSCode Extension](https://marketplace.visualstudio.com/items?itemName=Domi.dbux-code) from the VSCode Marketplace.
 2. Select the Dbux Extension on the VS sidebar -> Click the "Start Dbux" button
