--- a/docs_site/content/dbux-features/20-acg.mdx
+++ b/docs_site/content/dbux-features/20-acg.mdx
@@ -26,6 +26,10 @@ import TOC from '@comp/TOC';
 
 <hr />
 
+## How to use the ACG?
+
+Open the [call graph](./10-call-graph.mdx). Then press the `sync`/`async` button to toggle between modes. In `async` mode, the ACG reveals itself.
+
 ## Examples
 
 ### Example1: sample program {#example1}
@@ -76,12 +80,9 @@ With the ACG we hope to make asynchronous JavaScript a lot easier to understand 
 <!-- TODO: examples for visible race conditions -->
 
 
-
 ## How does the ACG work?
 
-The Dbux introduction video features several examples of the Asynchronous Call Graph (ACG):
-
-[![Video Introduction](https://img.youtube.com/vi/N9W6rhHMKbA/0.jpg)](https://youtu.be/N9W6rhHMKbA?t=621)
+The Dbux introduction video features several examples of the Asynchronous Call Graph (ACG): [direct link](https://youtu.be/N9W6rhHMKbA?t=621).
 
 The Asynchronous Call Graph (ACG) is the [call graph](./10-call-graph.mdx) in `Async` mode. You can see the ACG by opening the [call graph](./10-call-graph.mdx) and switching to `Async` mode (by clicking the `Sync` button in the [toolbar](./10-call-graph.mdx#toolbar)). The two call graph modes share many features, including the toolbar buttons, coloring and more, as explained [here](./10-call-graph.mdx#toolbar).
 
