--- a/docs_site/content/dbux-features/25-pdg.mdx
+++ b/docs_site/content/dbux-features/25-pdg.mdx
@@ -11,6 +11,15 @@ import Img from '@comp/Img';
 import TOC from '@comp/TOC';
 
 
+## How to use the PDG?
+
+TODO
+
+
+## Examples
+
+TODO
+
 
 ## Why do we need a PDG?
 
@@ -21,7 +30,7 @@ We designed the Program Dependency Graph (PDG) to allow the developer stay orien
 
 We illustrate using the PDG on two algorithms (`BubbleSort` and `Dijkstra`) in this video:
 
-[![Video Introduction](https://img.youtube.com/vi/dgXj3VoQJZQ/0.jpg)](https://www.youtube.com/watch?v=dgXj3VoQJZQ)
+[![Video: PDG](https://img.youtube.com/vi/dgXj3VoQJZQ/0.jpg)](https://www.youtube.com/watch?v=dgXj3VoQJZQ)
 
 In its fully summarized form, the PDG only shows a selected function's inputs, outputs and their dependency relationships. Many bugs become obvious on this level already. To understand causality, you can further zoom into or out of nested control flow blocks, all the way down to the statement level.
 
