fix up PDG docs + UI

--- a/docs_site/content/dbux-features/01-using-dbux.mdx
+++ b/docs_site/content/dbux-features/01-using-dbux.mdx
@@ -14,10 +14,11 @@ import TOC from '@src/components/TOC';
 <!-- <TOC toc={toc} /> -->
 
 
-Once [installed](#installation), using Dbux involves two steps:
+Using Dbux in three steps:
 
-1. Make sure to [run an Application with Dbux enabled](./02-enable-dbux.mdx).
-2. Use the <ToolLink name="dbux-code" /> for inspection + analysis.
+1. [Install Dbux](#installation)
+2. Make sure to [run an Application with Dbux enabled](./02-enable-dbux.mdx).
+3. Use the <ToolLink name="dbux-code" /> for inspection + analysis.
 
 All recorded applications show up in the [Application View](./05-applications.mdx).
 Once the application shows up, you can use the following tools for analysis:
