--- a/docs_site/content/90-faq.mdx
+++ b/docs_site/content/90-faq.mdx
@@ -29,8 +29,8 @@ Dbux offers [several commands](./tools-and-configuration/01-dbux-code.mdx#comman
 2. Search for a command... (type the name or some letters of the name)
 3. Select the command (`Enter`)
 4. See it execute.
-5. [Official documentation for VSCode Command Palette](https://code.visualstudio.com/docs/getstarted/userinterface#_command-palette).
-   * [(even more info...)](https://www.google.com/search?q=Official+documentation+for+VSCode+Command+Palette&hl=en)
+5. For more info, please consult the [official documentation for the VSCode Command Palette](https://code.visualstudio.com/docs/getstarted/userinterface#_command-palette).
+   * [(or consult with Google on even more relevant issues...)](https://www.google.com/search?q=Official+documentation+for+VSCode+Command+Palette&hl=en)
 
 :::tip
 You can bind commands to keys. [This official documentation explains how to easily keybind any command in VSCode](https://code.visualstudio.com/docs/getstarted/keybindings).
@@ -39,7 +39,7 @@ You can bind commands to keys. [This official documentation explains how to easi
 
 ## Why is someFile.js not Traced?
 
-If you are certain that a file executed in a [Dbux-enabled application](./dbux-features/02-enable-dbux.mdx), make sure your [configuration is set up to include](./guides/01-runtime-trace-filtering.mdx) the file in that specific package or path.
+If you are certain that a file executed in a [Dbux-enabled application](./dbux-features/02-enable-dbux.mdx), make sure your [configuration is not accidentally excluding the file, package or folder](./guides/01-runtime-trace-filtering.mdx).
 
 
 ## How can I debug code remotely?
