--- a/docs_site/content/tools-and-configuration/01-dbux-code.mdx
+++ b/docs_site/content/tools-and-configuration/01-dbux-code.mdx
@@ -34,7 +34,11 @@ Since the Runtime Server port is currently hard-coded[^1], only one instance can
 
 import Commands from '../_partials/_dbux-code-commands.mdx';
 
-Dbux offers a multitude of commands. If you have trouble, using the commands, please consult [the corresponding entry in our FAQ](../90-faq.mdx#how-to-use-commands).
+Dbux offers a multitude of commands.
+
+:::danger Don't know how to use commands?
+[Our FAQ explains how to use commands](../90-faq.mdx#how-to-use-commands).
+:::
 
 :::tip
 (Almost?) all buttons in the Dbux VSCode Extension have corresponding commands.
